# etf-holdings-analysis

./: .cookiecutter.json  .flake8  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  noxfile.py  pyproject.toml  requirements.txt
docs/: conf.py  index.rst  reference.rst  usage.rst
src/etf_holdings_analysis/: __init__.py  __main__.py  console.py
tests/: __init__.py  test_console.py  test_main.py  test_wikipedia.py
